solved menu problem

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "services": "Services",
   "contacts": "Contact Us",
-  "footer-description": "Italian Studies Society"
+  "footer-description": "Italian Studies Society",
+  "login": "Login"
 }
