--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,5 +1,6 @@
 {
   "services": "Servizi",
   "contacts": "Contattaci",
-  "footer-description": "Società di Studi Italiani"
+  "footer-description": "Società di Studi Italiani",
+  "login": "Login"
 }
