--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -1,5 +1,6 @@
 {
   "services": "서비스",
   "contacts": "연락처",
-  "footer-description": "이탈리아문화연구회"
+  "footer-description": "이탈리아문화연구회",
+  "login": "로그인"
 }
