--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,9 @@
 {
-  "services": "Services",
-  "contacts": "Contact Us",
-  "footer-description": "Italian Studies Society",
-  "login": "Login"
+  "home": "Home",
+  "events": "Events",
+  "articles": "Articles",
+  "about": "About",
+  "login": "Login",
+  "sign-up": "Sign up",
+  "footer-description": "Italian Studies Society"
 }
