--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,6 @@
   "about": "About",
   "login": "Login",
   "sign-up": "Sign up",
+  "logout": "Logout",
   "footer-description": "Italian Studies Society"
 }
