--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -5,5 +5,6 @@
   "about": "Chi siamo",
   "login": "Login",
   "sign-up": "Registrati",
+  "logout": "Logout",
   "footer-description": "Società di Studi Italiani"
 }
