--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -6,5 +6,8 @@
   "login": "Login",
   "sign-up": "Registrati",
   "logout": "Logout",
+
+  "user-menu-ticket": "Biglietti degli eventi",
+
   "footer-description": "Società di Studi Italiani"
 }
