USER AUTH AND FIRESTORE COMPLETE

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
   "logout": "Logout",
 
   "user-menu-ticket": "Personal events tickets",
+  "manage-site": "Manage site",
 
   "footer-description": "Italian Studies Society"
 }
