--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -8,6 +8,7 @@
   "logout": "Logout",
 
   "user-menu-ticket": "Biglietti degli eventi",
+  "manage-site": "Gestione del sito",
 
   "footer-description": "Società di Studi Italiani"
 }
