--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,8 @@
     "nav-title": "About",
     "member-title": "Members information"
   },
+  "unauthorized-access": "Error 401: Unathorized Access",
+  "page-not-found": "Error 404: Page Not Found",
 
   "login": "Login",
   "sign-up": "Sign up",
