ARTICLES PAGE FINISHED. REMEMBER TO CHECK THE PAGINATION OF THE EVENTS AND ARTICLES IN THE ADMIN MENU

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "nav-title": "Articles",
     "subparagraph": {
       "articles": "Articles",
+      "no-articles": "No articles found",
       "writers": "Writers",
       "minutes": "minutes lecture"
     }
