--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,11 @@
 {
-
-  "home": "Home",
+  "home": {
+    "nav-title": "Home",
+    "subparagraph": {
+      "articles": "Check Our Latest Articles",
+      "events": "Upcoming Events"
+    }
+  },
   "events": "Events",
   "articles": {
     "nav-title": "Articles",
