--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -6,7 +6,19 @@
       "events": "다가오는 이벤트"
     }
   },
-  "events": "이벤트",
+  "events": {
+    "nav-title": "이벤트",
+    "subparagraph": {
+      "events": "이벤트",
+      "no-events": "이벤트가 없습니다",
+      "date": "날짜",
+      "select" : {
+        "future": "다가오는",
+        "past": "지난",
+        "all": "모두"
+      }
+    }
+  },
   "articles": {
     "nav-title": "논문",
     "subparagraph": {
