FINISHED PERSONAL PAGE AND CHANGED ABOUT PAGE WITH THE CORRESPONDING ADMIN PAGE

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,6 +32,14 @@
     "nav-title": "About",
     "member-title": "Members information"
   },
+  "tickets": {
+    "title": "Your tickets",
+    "participation": "Your participation to events",
+    "no-participation": "No participation found",
+    "date": "Date",
+    "address": "Address",
+    "event": "Event"
+  },
   "unauthorized-access": "Error 401: Unathorized Access",
   "page-not-found": "Error 404: Page Not Found",
 
